cabal-version:       2.0
name:                servant-error-options
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/epicallan/servant-error-options
bug-reports:         https://github.com/epicallan/servant-error-options/issues
license:             MIT
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2019 Lukwago Allan
category:            Network, Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/epicallan/servant-error-options.git

library
  hs-source-dirs:      src
  exposed-modules:     ServantErrorOptions
                       

  build-depends:       base ^>= 4.12.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable servant-error-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , servant-error-options
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite servant-error-options-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.12.0.0
                     , servant-error-options
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
