cabal-version:       2.0
name:                servant-errors
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/epicallan/servant-errors
bug-reports:         https://github.com/epicallan/servant-errors/issues
license:             MIT
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2019 Lukwago Allan
category:            Network, Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/epicallan/servant-errors.git
library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Servant.Errors

  build-depends:       base ^>= 4.12.0.0
                     , aeson
                     , bytestring
                     , http-types
                     , http-api-data
                     , http-media
                     , scientific
                     , servant
                     , string-conversions
                     , text
                     , unordered-containers
                     , wai

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite readme
  build-depends:       base
                     , aeson
                     , text
                     , servant-errors
                     , servant-server
                     , wai
                     , warp

  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
