cabal-version:       2.0
name:                servant-errors
version:             0.1.0.3
synopsis:            Servant Errors wai-middlware
description:         A Wai middleware that uniformly structures errors with in a servant application. The library assumes all HTTP responses with status code greater than 200 and without an HTTP content type are error responses. This assumption is derived from servant server error handling implementation.

homepage:            https://github.com/epicallan/servant-errors
bug-reports:         https://github.com/epicallan/servant-errors/issues
license:             MIT
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2019 Lukwago Allan
category:            Network, Servant
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/epicallan/servant-errors.git
library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Servant.Errors

  build-depends:       base ^>= 4.12
                     , aeson ^>= 1.3
                     , bytestring ^>= 0.10.8.2
                     , http-types ^>= 0.12
                     , http-api-data ^>= 0.3
                     , http-media ^>= 0.7
                     , scientific ^>= 0.3
                     , servant ^>= 0.14
                     , string-conversions ^>= 0.4
                     , text ^>= 1.2
                     , unordered-containers ^>= 0.2
                     , wai ^>= 3.2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite readme
  build-depends:       base
                     , aeson ^>= 1.3
                     , text ^>= 1.2
                     , servant-errors
                     , servant-server ^>= 0.14
                     , wai ^>= 3.2
                     , warp ^>= 3.2.26

  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
