cabal-version:       2.2
name:                servant-errors
version:             0.1.7.0
synopsis:            Servant Errors wai-middlware
description:         A Wai middleware that uniformly structures errors with in a servant application. The library assumes all HTTP responses with status code greater than 200 and without an HTTP content type are error responses. This assumption is derived from servant server error handling implementation.

homepage:            https://github.com/epicallan/servant-errors
bug-reports:         https://github.com/epicallan/servant-errors/issues
license:             MIT
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2019 Lukwago Allan
category:            Network, Servant
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.8.4


source-repository head
  type:                git
  location:            https://github.com/epicallan/servant-errors.git

common common-options
  build-depends:       base  >= 4.10.0.0 && < 4.15
                     , base-compat >= 0.9.0
                     , aeson >= 1.3 && < 1.6
                     , text  >= 1.2
                     , wai   >= 3.2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -Wpartial-fields
  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Servant.Errors
  build-depends:       bytestring >= 0.10.8.2
                     , http-types >= 0.12
                     , http-api-data >= 0.3
                     , http-media >= 0.7
                     , scientific >= 0.3
                     , servant >= 0.13
                     , string-conversions >= 0.4
                     , unordered-containers >= 0.2

test-suite readme
  import:              common-options
  build-depends:       servant-errors
                     , servant-server >= 0.13
                     , warp >= 3.2.26

  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit
  build-tool-depends:  markdown-unlit:markdown-unlit
